--- a/google-homepage/index.html
+++ b/google-homepage/index.html
@@ -18,8 +18,8 @@
         <!-- Search -->
         <div style="background-color: #EEEEEE; padding: 5px; width: 70%; margin: 0 auto;">
             <p style="margin: 0;">Search the web using Google!</p>
-            <form action="">
-                <input type="text" size="40px">
+            <form action="https://oldgoogle.neocities.org/1998/search">
+                <input type="text" size="40px" name="query" id="query">
                 <br>
                 <select name="results" id="results">
                     <option value="10">10 results</option>
@@ -34,7 +34,9 @@
 
         <!-- About -->
         <div style="padding: 5px; width: 70%; margin: 0 auto;">
-            <h2 style="margin: 0 0 19px 0;"><a href="">About Google!</a></h2>
+            <h2 style="margin: 0 0 19px 0;">
+                <a href=""https://oldgoogle.neocities.org/1998/about.html"">About Google!</a>
+            </h2>
             <a href="https://oldgoogle.neocities.org/stanford">Stanford Search</a>
             <a href="https://oldgoogle.neocities.org/linux">Linux Search</a>
         </div>
